tests/spec/fail/generic_list_arg_mismatch.aja
fuc total(nums: list[int]) -> int:
    return 0

bad = ["x"]
print(total(bad))
